[project]
name = "loganalysis"
version = "0.1.0"
description = "JuiceFS log analyzer for I/O pattern analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
juicefs-analyze = "loganalysis.log_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
