[project]
name = "oplog-analysis"
version = "0.1.0"
description = "JuiceFS operation log analyzer for I/O pattern analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
oplog-analysis = "oplog_analysis.log_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
